@@ -4,7 +4,8 @@ X-editable changelog
 
 Version 1.1.1 wip
 ----------------------------   
-[enh] object can be passed in 'option' method to set several options simultaneously (vitalets)  
+[enh] 'showbuttons' option to hide buttons in form (vitalets)  
+[enh] object can be passed in 'option' method to set several options at once (vitalets)  
 [enh #20] toggle editable by 'dblclick' and 'mouseenter' (vitalets)  
 [enh] added 'inputs-ext' directory with sample input 'address'. They will not be concatenated to main files (vitalets)  
 [enh #13] 'onblur' option: to cancel, submit or ignore when user clicks outside the form (vitalets)  
